--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "react": "^19.0.0",
