--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
+    "openai": "^5.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
