--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "openai": "^5.5.0",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
